--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   <body class="flex flex-col">
     <main class="container flex flex-col">
       <img class="logo" src="./src/images/logo.svg" alt="" aria-hidden="true" />
-      <form class="form flex flex-col" action="">
+      <form
+        class="form flex flex-col"
+        action="https://dabinderudhan.github.io/tip-calculator-app/"
+      >
         <ul class="input flex flex-col">
           <li class="input-data flex flex-col">
             <label class="input-data--heading" for="bill">Bill</label>
