--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./dist/css/main.css" />
 
     <!-- external JS -->
-    <script defer src="./src/js/index.js"></script>
+    <script defer src="./src/js/index.js" type="text/javascript"></script>
 
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
